feat(api): local updates prior to deployment

--- a/.env.sample
+++ b/.env.sample
@@ -40,3 +40,10 @@ SMTP_PASSWORD=
 SMTP_FROM_EMAIL=noreply@eassist.local
 SMTP_FROM_NAME='eAssist Support'
 
+# === Audit logging ===
+# If set, write structured JSONL access logs to this file (stdout is always used too)
+AUDIT_LOG_PATH=
+# Include redacted request body and query preview in logs (true/false)
+AUDIT_LOG_INCLUDE_BODY=false
+# Max characters for request body preview when included
+AUDIT_LOG_BODY_LIMIT=2048
