chore(deploy): add custom run-name to display clean deployment titles in Actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,7 @@
 name: Deploy eAssist API
 
+run-name: Deploy eAssist API to Production (${{ github.sha }})
+
 on:
   push:
     branches: [ "releases" ]
