Fix: Correct heredoc syntax for systemd service file The previous deployment failed due to a syntax error in the heredoc used to create the systemd service file. The 'EOF' marker was quoted, which prevented the expansion of variables like the user and working directory. This commit fixes the issue by unquoting the EOF marker, allowing the shell to correctly substitute the variables and create a valid systemd service file.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,6 +109,7 @@ jobs:
             
             # Create systemd service file
             echo '[Deploy] Creating systemd service file'
+            # Use a temporary file for the service definition. Note the unquoted EOF to allow variable expansion.
             cat > /tmp/eassist-api.service << EOF
 [Unit]
 Description=eAssist API Service
@@ -118,7 +119,7 @@ After=network.target
 Type=simple
 User=${{ secrets.DEPLOY_USER || 'gitdeploy' }}
 WorkingDirectory=${{ env.DEPLOY_PATH }}
-ExecStart=$(which npm) start
+ExecStart=/usr/bin/npm start
 Restart=on-failure
 Environment=NODE_ENV=production
 Environment=PORT=8080
